Work on Home page

--- a/index.html
+++ b/index.html
@@ -20,5 +20,24 @@
             </ul>
         </div>
     </nav>
+    <section class="section">
+        <div class="wrapper">
+            <div class="offer">
+                 <h1 class="title">
+                    Azov Code
+                 </h1>
+                 <p class="intro">
+                    A young team of developers who 
+                    have a goal, and this goal is 
+                    to give people convenience 
+                    and functionality! 
+                 </p>
+                 <button id="btn" class="btn">
+                    Our projects
+                </button>
+            </div>
+            <img src="Media/logo(home).png" alt="Not found" class="logo-home">
+        </div>
+    </section>
 </body>
 </html>
